# vulkantest

./: CMakeLists.txt  LICENSE  README.md
app/: CMakeLists.txt  app.c  app.h  main.c
inc/graphics/: setup.h
inc/helpers/: helpers.h
inc/window/: vksurface.h  window.h
shaders/: shader.frag.d  shader.vert  shader.vert.d
src/: CMakeLists.txt
src/graphics/: CMakeLists.txt  setup.c  vertex.c  vertex.h  vksetup.c  vksetup.h
src/helpers/: CMakeLists.txt
src/window/: CMakeLists.txt  wayland_window.c  xcb_vksurface.c  xcb_window.c  xcb_window.h
